@@ -1,3 +1,6 @@
+ - Complete rewrite of the multi-adaptive solver to improve performance
+ - Add PETSc wrappers NewMatrix and NewVector
+ - Add DOLFIN/PETSc benchmarks
 0.5.1 [2004-11-10]
  - Experimental support for automatic generation of forms using FFC
  - Allow user to supply Jacobian to ODE solver
